fix font and whitespace

--- a/frontend/src/containers/Homepage/Homepage.css
+++ b/frontend/src/containers/Homepage/Homepage.css
@@ -16,3 +16,10 @@
   margin-top: 20px;
   text-align: center;
 }
+
+h2 {
+	
+	line-height: 1rem;
+	margin-bottom: 0rem;
+	margin-top: 1.5rem;
+}
